some fixes on mobile

--- a/src/app/components/scrollIcon/styles.module.scss
+++ b/src/app/components/scrollIcon/styles.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   left: 50%;
-  position: fixed;
+  position: absolute;
   transform: translateX(-50%);
 }
 
