--- a/src/app/screens/Landing/sections/Contact/styles.module.scss
+++ b/src/app/screens/Landing/sections/Contact/styles.module.scss
@@ -69,6 +69,7 @@
     }
   }
   .container {
+    padding: 0 20px;
     > :first-child {
       margin-bottom: 30px;
     }
